ndb - bug#51389 - fix commit ack marker handling wrt 62 to 63 upgrade